# hw14/internal/gateway/http/gen/models.gen.go
@@ -1,6 +1,6 @@
 // Package gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package gen
 
 // BuildInfo defines model for BuildInfo.
@@ -46,6 +46,9 @@ type LoginUserRequest struct {
 type LoginUserResponse struct {
 	// AccessToken JWT token for accessing protected routes
 	AccessToken string `json:"accessToken"`
+
+	// RefreshToken JWT token for updating access token
+	RefreshToken string `json:"refreshToken"`
 }
 
 // RegisterUserRequest defines model for RegisterUserRequest.
